swagger getAllByType
